--- a/project/src/main/res/layout/widget_car_confirmation.xml
+++ b/project/src/main/res/layout/widget_car_confirmation.xml
@@ -1,161 +1,228 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <com.expedia.bookings.widget.CarConfirmationWidget xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1A1D20"
-    android:orientation="vertical">
+    android:background="@color/cars_confirmation_background">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.expedia.bookings.widget.OptimizedImageView
+                android:id="@+id/background_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:scaleType="centerCrop" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:background="@color/cars_confirmation_gradient" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/vendor_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="20sp"
+                    app:textStyle="medium" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/pickup_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/successful_checkout_pickup_label"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="15sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/pickup_location_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="15sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/pickup_date_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/pickup_location_text"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="15sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/dropoff_date_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/pickup_date_text"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:minHeight="?attr/actionBarSize" />
+        </FrameLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#4E555E"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/direction_action_button"
+                    style="@style/CarsBookingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/cars_confirmation_action_background"
+                    android:drawableLeft="@drawable/car_directions"
+                    android:text="@string/directions"
+                    android:textColor="@color/cars_confirmation_action_text_color" />
+
+                <Button
+                    android:id="@+id/calendar_action_button"
+                    style="@style/CarsBookingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/cars_confirmation_action_background"
+                    android:drawableLeft="@drawable/add_to_calendar"
+                    android:text="@string/add_to_calendar"
+                    android:textColor="@color/cars_confirmation_action_text_color" />
+
+                <Button
+                    android:id="@+id/call_action_button"
+                    style="@style/CarsBookingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/cars_confirmation_action_background"
+                    android:drawableLeft="@drawable/car_call"
+                    android:text="@string/call_customer_support"
+                    android:textColor="@color/cars_confirmation_action_text_color" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:background="#2B3036" />
+
+                <Button
+                    android:id="@+id/add_hotel_button"
+                    style="@style/CarsBookingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/cars_confirmation_action_background"
+                    android:drawableLeft="@drawable/car_hotel"
+                    android:textColor="@color/cars_confirmation_action_text_color" />
+
+                <Button
+                    android:id="@+id/add_flight_button"
+                    style="@style/CarsBookingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/cars_confirmation_action_background"
+                    android:drawableLeft="@drawable/car_flights"
+                    android:textColor="@color/cars_confirmation_action_text_color" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:background="#3A424C"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/confirmation_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/cars_confirmation_email_text_color"
+                        android:textSize="12sp"
+                        app:textStyle="light" />
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/email_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/cars_confirmation_email_text_color"
+                        android:textSize="12sp"
+                        app:textStyle="light" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/call_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.expedia.bookings.widget.OptimizedImageView
-            android:id="@+id/background_image_view"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"></com.expedia.bookings.widget.OptimizedImageView>
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:background="#60000000"
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <LinearLayout
+            android:id="@+id/call_container"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/vendor_text"
+                android:id="@+id/local_phone_number_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/itin_white_text"
-               ></com.expedia.bookings.widget.TextView>
+                android:layout_above="@+id/toll_free_phone_number_text_view"
+                android:background="@android:color/white"
+                android:padding="12dp"
+                android:textColor="@color/text_black"
+                android:textSize="18dp" />
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/pickup_label"
+                android:id="@+id/toll_free_phone_number_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:textColor="@color/itin_white_text"
-                android:text="@string/successful_checkout_pickup_label"></com.expedia.bookings.widget.TextView>
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/pickup_location_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:layout_marginBottom="12dp"
-                android:textColor="@color/itin_white_text"
-                ></com.expedia.bookings.widget.TextView>
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/pickup_date_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pickup_location_text"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:textColor="@color/itin_white_text"
-                ></com.expedia.bookings.widget.TextView>
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/dropoff_date_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pickup_date_text"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:textColor="@color/itin_white_text"
-                ></com.expedia.bookings.widget.TextView>
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/white"
+                android:padding="12dp"
+                android:textColor="@color/text_black"
+                android:textSize="18dp" />
         </LinearLayout>
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_gravity="top"
-            android:minHeight="?attr/actionBarSize" />
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="#2F343B"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_marginTop="1dp"
-            android:layout_width="match_parent"
-            style="@style/CarsBookingButton"
-            android:drawableLeft="@drawable/ic_direction"
-            android:text="@string/directions"
-            android:layout_height="wrap_content"></Button>
-
-        <Button
-            android:layout_marginTop="1dp"
-            style="@style/CarsBookingButton"
-            android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_calendar"
-            android:text="@string/add_to_calendar"
-            android:layout_height="wrap_content"></Button>
-
-        <Button
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_width="match_parent"
-            style="@style/CarsBookingButton"
-            android:drawableLeft="@drawable/ic_phone"
-            android:text="@string/call_customer_support"
-            android:layout_height="wrap_content"></Button>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="#202429"></View>
-
-        <Button
-            android:layout_marginTop="1dp"
-            android:layout_width="match_parent"
-            android:id="@+id/add_hotel_button"
-            android:drawableLeft="@drawable/ic_suggest_hotel"
-            style="@style/CarsBookingButton"
-            android:layout_height="wrap_content"></Button>
-
-        <Button
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:id="@+id/add_flight_button"
-            style="@style/CarsBookingButton"
-            android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_logo_flights"
-            android:layout_height="wrap_content"></Button>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="bottom"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/confirmation_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="16sp"
-            android:textColor="#C3C3C3"
-            ></com.expedia.bookings.widget.TextView>
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/email_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#C3C3C3"
-            android:layout_gravity="center_horizontal"
-            ></com.expedia.bookings.widget.TextView>
-    </LinearLayout>
 </com.expedia.bookings.widget.CarConfirmationWidget>
