--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -224,5 +224,11 @@
     <color name="cars_valid_days_calendar">#3A3A3A</color>
     <color name="cars_calendar_week_color">#888888</color>
     <color name="cars_checkmark_color">#29a653</color>
+    <color name="cars_confirmation_icon_color">#D1D3D6</color>
+    <color name="cars_confirmation_background">#1A1D20</color>
+    <color name="cars_confirmation_gradient">#80000000</color>
+    <color name="cars_confirmation_action_text_color">#F3F3F3</color>
+    <color name="cars_confirmation_email_text_color">#C8C8C8</color>
+    <color name="cars_confirmation_action_background">#3A424C</color>
 
 </resources>
