--- a/project/src/main/res/layout/cars_results_presenter.xml
+++ b/project/src/main/res/layout/cars_results_presenter.xml
@@ -135,8 +135,7 @@
         android:layout_width="match_parent"
         android:layout_gravity="top"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/cars_primary_color"
-        android:alpha=".95" />
+        android:background="@color/cars_primary_color" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
