--- a/project/src/main/res/layout/section_car_category_summary.xml
+++ b/project/src/main/res/layout/section_car_category_summary.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     card_view:cardCornerRadius="4dp">
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -16,11 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="144dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:background="@drawable/cars_details_gradient_bottom"
+            android:layout_height="72dp"
+            android:layout_gravity="bottom" />
+
         <LinearLayout
             android:id="@+id/details_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/background_image_view"
+            android:layout_gravity="bottom"
             android:orientation="horizontal"
             android:padding="12dp">
 
@@ -34,10 +41,6 @@
                 android:textStyle="bold"
                 android:layout_gravity="left"
                 android:textSize="18sp"
-                android:shadowColor="@color/cars_actionbar_text_color"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
                 tools:text="ECONOMY" />
 
             <TextView
@@ -51,92 +54,88 @@
                 android:layout_alignParentRight="true"
                 android:textColor="#FFF"
                 android:textSize="18sp"
-                android:shadowColor="@color/cars_actionbar_text_color"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
                 tools:text="$10" />
 
         </LinearLayout>
+    </FrameLayout>
 
-        <LinearLayout
-            android:id="@+id/price_container"
-            android:layout_width="match_parent"
-            android:background="@android:color/white"
+    <LinearLayout
+        android:layout_marginTop="144dp"
+        android:id="@+id/price_container"
+        android:layout_width="match_parent"
+        android:background="@android:color/white"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/background_image_view"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal"
+        android:padding="12dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/background_image_view"
-            android:layout_alignParentLeft="true"
-            android:orientation="horizontal"
-            android:padding="12dp">
+            android:src="@drawable/person" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="4dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/person" />
+        <TextView
+            android:id="@+id/passenger_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="2dp"
+            android:layout_marginRight="4dp"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textSize="12sp"
+            android:text="5" />
 
-            <TextView
-                android:id="@+id/passenger_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="2dp"
-                android:layout_marginRight="4dp"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textSize="12sp"
-                android:text="5" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="4dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baggage" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baggage" />
 
 
-            <TextView
-                android:id="@+id/bag_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:layout_gravity="center_vertical"
-                android:padding="2dp"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textSize="12sp"
-                android:text="3" />
+        <TextView
+            android:id="@+id/bag_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
+            android:layout_gravity="center_vertical"
+            android:padding="2dp"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textSize="12sp"
+            android:text="3" />
 
-            <ImageView
-                android:layout_gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/doors" />
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/doors" />
 
-            <TextView
-                android:id="@+id/door_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="2dp"
-                android:layout_marginRight="4dp"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textSize="12sp"
-                android:text="4" />
+        <TextView
+            android:id="@+id/door_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="2dp"
+            android:layout_marginRight="4dp"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textSize="12sp"
+            android:text="4" />
 
-            <TextView
-                android:id="@+id/total_price_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:gravity="right"
-                android:layout_marginLeft="4dp"
-                android:layout_weight="1"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textSize="12sp"
-                tools:text="Total $2132" />
-        </LinearLayout>
-
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/total_price_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:gravity="right"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textSize="12sp"
+            tools:text="Total $2132" />
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
