--- a/project/src/main/res/layout/cvv_entry_widget.xml
+++ b/project/src/main/res/layout/cvv_entry_widget.xml
@@ -56,6 +56,7 @@
         </FrameLayout>
 
         <com.expedia.bookings.widget.MaskView
+            android:id="@+id/mask_cvv_widget"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:exposedPadding="-4dp"
