--- a/project/src/main/res/layout/car_driver_widget.xml
+++ b/project/src/main/res/layout/car_driver_widget.xml
@@ -134,6 +134,7 @@
                 android:layout_weight="5"
                 android:hint="@string/phone_number_hint"
                 android:imeOptions="actionDone"
+                android:inputType="phone"
                 android:singleLine="true"
                 android:textSize="16sp" />
         </LinearLayout>
